@@ -1,5 +1,5 @@
 <%
-std_opts = "BROWSER=chrome --no-source --color --format pretty"
+std_opts = "BROWSER=firefox --no-source --color --format pretty"
 %>
 
 default: DRIVER=WATIR <%= std_opts %>
