@@ -1,0 +1,11 @@
+<html>
+  <head>
+    <style type ="text/css" media="screen">
+      a { font-size: 10px; }
+      a:hover { font-size: 20px; }
+    </style>
+  </head>
+  <body>
+    <a href="#">hello</a>
+  </body>
+</html>
